# bazel_esp8266

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: ci.yaml
bazel/build_rules/: BUILD  flash.bzl  flash.sh
example/: BUILD  hello.cc
platform/: BUILD  boards.bzl  platform.bzl
platform/board/: BUILD
platform/cpu/: BUILD
